Revert "style.css: Prevent wrapping in flights table"
This reverts commit 8ea68e199abfc12a6b746e63c78099151fc56938.

Didn't work in Firefox :(

--- a/skylines/public/css/style.css
+++ b/skylines/public/css/style.css
@@ -84,7 +84,7 @@ textarea {
   text-align:right;
 }
 
-#flight-table td {
+#flight-table .date {
   white-space: nowrap;
 }
 
